[gd_scene load_steps=4 format=3 uid="uid://d1v1m2j033syj"]

[ext_resource type="Script" path="res://ui/editorgui.gd" id="1_hptt7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tq0sg"]
bg_color = Color(1, 0.376471, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2o1f6"]
bg_color = Color(0.619608, 0.423529, 0, 0.537255)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.603922, 0.4, 0, 0.466667)

[node name="editorgui" type="Panel"]
offset_left = 40.0
offset_top = 216.0
offset_right = 264.0
offset_bottom = 614.0
scale = Vector2(1.57028, 1.53368)
theme_override_styles/panel = SubResource("StyleBoxFlat_tq0sg")
script = ExtResource("1_hptt7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 2
offset_left = 6.0
offset_top = 5.0
offset_right = 267.0
offset_bottom = 389.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "new room"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "delete room"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2o1f6")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1e+10

[node name="LineEdit2" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit3" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button4" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "apply scale"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "enable edit faces"

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "enable isolate room"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
disabled = true
item_count = 8
popup/item_0/text = "{select type}"
popup/item_1/text = "NONE"
popup/item_1/id = 1
popup/item_2/text = "WALL"
popup/item_2/id = 2
popup/item_3/text = "HOLE"
popup/item_3/id = 3
popup/item_4/text = "DOOR"
popup/item_4/id = 4
popup/item_5/text = "OPEN"
popup/item_5/id = 5
popup/item_6/text = "OPEN_OUT"
popup/item_6/id = 6
popup/item_7/text = "CITY_EXIT_DOOR"
popup/item_7/id = 7
